<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_vipy"
            tools:srcCompat="@drawable/ic_vipy" />

        <TextView
            android:id="@+id/bemVindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/username"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:hint="@string/digiteAqui"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:errorEnabled="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInput"
            style="@style/button_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            app:hintEnabled="false"
            android:inputType="textPassword"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            android:minHeight="48dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordInputInternal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_style"
                android:hint="@string/digiteAqui"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Entrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/gradient_button"
            android:gravity="center_horizontal|center_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/entrar"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NovoPorAqui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novoPorAqui" />

        <Button
            android:id="@+id/CriarConta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/outline_button"
            android:backgroundTint="#F5F5F5"
            android:text="@string/criaConta"
            android:textColor="#005FB1"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</LinearLayout>