<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/displayname"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:hint="@string/digiteAqui"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:hint="@string/digiteAqui"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInput"
            style="@style/button_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/digiteAqui"
            android:inputType="textPassword"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:minHeight="48dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_style"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="#449AFF"
            android:gravity="center_horizontal|center_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/criaConta"
            app:cornerRadius="20dp" />

    </LinearLayout>

</LinearLayout>