<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/menuUp"
        android:layout_width="412dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="33dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/perfil_backbutton"
            android:contentDescription="@string/follerwrs"
            android:padding="5dp"
            app:srcCompat="@drawable/vector"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/username" />

        <ImageView
            android:id="@+id/vipyLogo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_vipy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/perfilMenu"
        android:layout_width="411dp"
        android:layout_height="665dp"
        android:orientation="vertical"
        android:padding="1dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp">

        <LinearLayout
            android:id="@+id/picMenu"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <androidx.cardview.widget.CardView
                android:layout_width="73dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayNamePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/displayname" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follerwrs" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_off_background"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/following" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followCheckMenu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:padding="1.5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#E2E2E2"
                app:cardCornerRadius="15dp"
                app:contentPadding="6dp"
                app:contentPaddingBottom="6dp"
                app:contentPaddingLeft="6dp"
                app:contentPaddingRight="6dp"
                app:contentPaddingTop="6dp">

                <TextView
                    android:id="@+id/followYou"
                    android:layout_width="218dp"
                    android:layout_height="31dp"
                    android:layout_weight="1"
                    android:text="@string/followYou"
                    android:textColor="#616161"
                    android:translationX="4dp"
                    android:translationY="-2dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/checkIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    app:srcCompat="@drawable/checkperfil"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/checkUser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"
                    android:text="@string/checkUser"
                    android:textColor="#00838F" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/bioUserCard"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            app:cardBackgroundColor="#E2E2E2"
            app:cardCornerRadius="35dp"
            app:contentPadding="6dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="6dp"
            app:contentPaddingRight="6dp"
            app:contentPaddingTop="6dp">

            <TextView
                android:id="@+id/bioUser"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:text="@string/bioUser"
                android:textColor="#616161" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <androidx.cardview.widget.CardView
                android:layout_width="123dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="27dp"
                app:contentPadding="6dp">

                <ImageButton
                    android:id="@+id/followGradButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/following"
                    android:scaleX="1.55"
                    android:scaleY="1.55"
                    app:srcCompat="@drawable/gradient_button"
                    tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/followImgButton"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/t"
                    android:translationX="37dp"
                    android:translationY="15dp"
                    app:srcCompat="@drawable/followprofile"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/followingButton"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/followingButton"
                    android:textColor="@color/white"
                    android:translationX="35dp"
                    android:translationY="35dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="123dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="27dp"
                app:contentPadding="6dp">

                <ImageButton
                    android:id="@+id/crushGradButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/crushButton"
                    android:scaleX="1.55"
                    android:scaleY="1.55"
                    app:srcCompat="@drawable/gradient_button_crush"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/crushImgButton"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:translationX="37dp"
                    android:translationY="15dp"
                    app:srcCompat="@drawable/crush"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/crushButton"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/crushButton"
                    android:textColor="@color/white"
                    android:translationX="35dp"
                    android:translationY="35dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="123dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="27dp"
                app:contentPadding="6dp">


                <ImageView
                    android:id="@+id/moreMenuImgButton"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:rotation="90"
                    android:translationX="27dp"
                    android:translationY="8dp"
                    app:srcCompat="@drawable/dots" />

                <TextView
                    android:id="@+id/moreMenuButton"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/moreMenuButton"
                    android:textColor="@color/black"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000"
                    android:translationX="35dp"
                    android:translationY="35dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ImageView
            android:id="@+id/bioView"
            android:layout_width="wrap_content"
            android:layout_height="349dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/imagbiouser" />

        <HorizontalScrollView
            android:id="@+id/scrollPartition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    app:cardCornerRadius="27dp"
                    app:contentPadding="6dp">


                    <TextView
                        android:id="@+id/menuPerfilText"
                        android:layout_width="98dp"
                        android:layout_height="31dp"
                        android:drawablePadding="10dp"
                        android:text="@string/menuPerfilButton"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHighlight="#000000"
                        android:textColorHint="#000000"
                        android:textColorLink="#000000"
                        android:textSize="18sp"
                        android:translationX="0dp"
                        android:translationY="30dp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>