<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/surface"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_vipy"
            tools:srcCompat="@drawable/ic_vipy" />

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/verificationCode"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInput"
            style="@style/button_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verificationInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_style"
                android:hint="@string/digiteAqui"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/gradient_button"
            android:gravity="center_horizontal|center_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/Verificar"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>